# ferrocodex

./: .env.example  .gitignore  .readthedocs.yaml  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CSP_IMPLEMENTATION.md  Dockerfile.testing  LICENSE  QA_REVIEW_PASSWORDGENERATOR_UI_SYNC_FIX.md  QA_VALIDATION_REPORT_v0.4.1.md  README.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  UI_SYNC_MANUAL_TEST_CHECKLIST.md  package-lock.json  package.json  run-with-display.sh  setup-display.sh  start-frontend.sh  story-draft-checklist.md  test-frontend.sh  tsconfig.json  turbo.json
apps/desktop/src-tauri/: Cargo.toml  build_errors.txt  build_errors_full.txt  current_errors.txt  errors.txt  final_error.txt  new_errors.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 20250123_add_firmware_status_workflow.sql  20250125_fix_firmware_metadata.sql  20250128_add_request_id_tracking.sql  20250131_add_search_performance_indexes.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/assets/: mod.rs  tree_navigation.rs
apps/desktop/src-tauri/src/associations/: mod.rs
apps/desktop/src-tauri/src/audit/: mod.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/branches/: mod.rs
apps/desktop/src-tauri/src/bulk/: mod.rs  operations.rs
apps/desktop/src-tauri/src/commands/: asset_commands.rs  association_commands.rs  auth_commands.rs  branch_commands.rs  bulk_commands.rs  configuration_commands.rs  firmware_commands.rs  metadata_commands.rs  mod.rs  recovery_commands.rs  security_commands.rs  settings_commands.rs  system_commands.rs  user_commands.rs  vault_commands.rs  workflow_commands.rs
apps/desktop/src-tauri/src/configurations/: mod.rs  status_tests.rs
apps/desktop/src-tauri/src/database/: mod.rs
apps/desktop/src-tauri/src/encryption/: mod.rs
apps/desktop/src-tauri/src/error_handling/: circuit_breaker.rs  classification.rs  compatibility_tests.rs  context.rs  conversion.rs  degradation_preferences.rs  enhanced_cache.rs  graceful_degradation.rs  integration_tests.rs  manual_recovery.rs  mod.rs  offline_providers.rs  recovery_coordinator.rs  repository.rs  request_propagation.rs  retry.rs  service_provider.rs  test_integration.rs  types.rs  ui_status.rs  user_notifications.rs
apps/desktop/src-tauri/src/firmware/: mod.rs
apps/desktop/src-tauri/src/firmware_analysis/: analyzer.rs  mod.rs  models.rs  queue.rs  repository.rs
apps/desktop/src-tauri/src/handlers/: asset_handler.rs  auth_handler.rs  branch_handler.rs  configuration_handler.rs  firmware_handler.rs  mod.rs  (+6 more)
(+479 files in other folders)
