[package]
name = "ferrocodex"
version = "0.4.4"
description = "Secure password management and encrypted storage"
authors = ["Ferrocodex Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferrocodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.17.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tempfile = "3.13"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
flate2 = "1.0.24"
sha2 = "0.10"
binwalk = "3.1.0"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
async-trait = "0.1"

